test/reverseSquare16.slq

def h[Ï„:qtype,n:!â„•](x:!Ï„,b:ğ”¹^n)mfreeâ‡’b;

def main(){
	z:=reverse(h); /// error
}
